--- a/languages/fr_FR.po
+++ b/languages/fr_FR.po
@@ -1,12 +1,10 @@
-# Copyright (C) 2023 Marie Rigal
-# This file is distributed under the GNU General Public License v2 or later.
 msgid ""
 msgstr ""
 "Project-Id-Version: USM 1.0.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/usm-wordpress-"
 "theme\n"
-"POT-Creation-Date: 2023-12-30T16:33:35+00:00\n"
-"PO-Revision-Date: 2023-12-30 17:34+0100\n"
+"POT-Creation-Date: 2024-01-03T10:52:38+00:00\n"
+"PO-Revision-Date: 2024-01-03 11:55+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fr_FR\n"
@@ -36,49 +34,25 @@ msgid "https://github.com/marierigal"
 msgstr "https://github.com/marierigal"
 
 #. translators: Label for core/navigation-link block arrow-link style
-#: functions.php:61
+#: functions.php:50
 msgctxt "Block style name"
-msgid "With arrow"
-msgstr "Avec une flèche"
+msgid "Arrow link"
+msgstr "Lien fléché"
 
-#. translators: Label for usm/theme pattern category
-#: functions.php:108
-msgctxt "Pattern category name"
-msgid "Theme"
-msgstr "Thème"
-
-#. translators: Label for usm/header pattern category
-#: functions.php:112
-msgctxt "Pattern category name"
-msgid "Header"
-msgstr "En-tête"
-
-#. translators: Label for usm/footer pattern category
-#: functions.php:116
-msgctxt "Pattern category name"
-msgid "Footer"
-msgstr "Pied de page"
-
-#. translators: Label for usm/posts pattern category
-#: functions.php:120
-msgctxt "Pattern category name"
-msgid "Posts"
-msgstr "Article"
-
-#. translators: Label for usm/sidebar pattern category
-#: functions.php:124
+#. translators: Label for sidebar pattern category
+#: functions.php:58
 msgctxt "Pattern category name"
 msgid "Sidebar"
 msgstr "Colonne latérale"
 
 #. translators: Label for sidebar template part area
-#: functions.php:144
+#: functions.php:69
 msgctxt "Part area name"
 msgid "Sidebar"
 msgstr "Colonne latérale"
 
 #. translators: Description for sidebar template part area
-#: functions.php:146
+#: functions.php:71
 msgctxt "Part area description"
 msgid ""
 "The Sidebar template defines a page area that can be found on the Page (With "
@@ -86,6 +60,46 @@ msgid ""
 msgstr ""
 "Le modèle Colonne latérale défini une zone de page qui peut être trouvée "
 "dans le modèle de page avec colonne latérale."
+
+#. translators: The display text for the "true" value of the true_false ACF field type
+#: includes/class-acf-fields.php:264
+msgid "Yes"
+msgstr "Oui"
+
+#. translators: The display text for the "false" value of the true_false ACF field type
+#: includes/class-acf-fields.php:269
+msgid "No"
+msgstr "Non"
+
+#: includes/class-acf-fields.php:436
+msgid "This data type is not supported! Please contact the author for help."
+msgstr ""
+"Ce type de données n'est pas pris en charge ! Veuillez contacter l'auteur "
+"pour obtenir de l'aide."
+
+#: includes/class-meta-field-block.php:150
+msgid "This data type is not supported!"
+msgstr "Ce type de données n'est pas pris en charge !"
+
+#. translators: Recommended plugins admin notice message where %s is the list of missing plugins
+#: includes/class-plugin-manager.php:33
+msgctxt "Admin notice"
+msgid ""
+"The following plugins are not installed and/or active but are recommended "
+"for this theme: %s"
+msgstr ""
+"Les extensions suivantes ne sont pas installées et/ou activées mais sont "
+"recommandées pour ce thème : %s"
+
+#: includes/class-plugin-manager.php:73
+msgctxt "Plugin action"
+msgid "activate"
+msgstr "activer"
+
+#: includes/class-plugin-manager.php:74
+msgctxt "Plugin action"
+msgid "install"
+msgstr "installer"
 
 #: patterns/404.php
 msgctxt "Pattern title"
