--- a/languages/fr_FR.po
+++ b/languages/fr_FR.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: USM 1.0.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/usm-wordpress-"
 "theme\n"
-"POT-Creation-Date: 2024-01-05T20:02:41+00:00\n"
-"PO-Revision-Date: 2024-01-05 21:10+0100\n"
+"POT-Creation-Date: 2024-01-09T13:35:17+00:00\n"
+"PO-Revision-Date: 2024-01-09 14:38+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fr_FR\n"
@@ -40,25 +40,25 @@ msgstr ""
 "Ce type de donnée nécessite que l’extension ACF soit installée et activée !"
 
 #. translators: Label for core/navigation-link block arrow-link style
-#: functions.php:52
+#: functions.php:53
 msgctxt "Block style name"
 msgid "Arrow link"
 msgstr "Lien fléché"
 
 #. translators: Label for sidebar pattern category
-#: functions.php:60
+#: functions.php:61
 msgctxt "Pattern category name"
 msgid "Sidebar"
 msgstr "Colonne latérale"
 
 #. translators: Label for sidebar template part area
-#: functions.php:71
+#: functions.php:72
 msgctxt "Part area name"
 msgid "Sidebar"
 msgstr "Colonne latérale"
 
 #. translators: Description for sidebar template part area
-#: functions.php:73
+#: functions.php:74
 msgctxt "Part area description"
 msgid ""
 "The Sidebar template defines a page area that can be found on the Page (With "
@@ -993,6 +993,18 @@ msgctxt "block keyword"
 msgid "metadata"
 msgstr "metadata"
 
+#: build/blocks/player-thumbnail/block.json
+#: src/blocks/player-thumbnail/block.json
+msgctxt "block title"
+msgid "Player thumbnail"
+msgstr "Vignette joueur"
+
+#: build/blocks/player-thumbnail/block.json
+#: src/blocks/player-thumbnail/block.json
+msgctxt "block description"
+msgid "Display a player thumbnail with name and position"
+msgstr "Affiche la vignette d’un joueur"
+
 #: theme.json
 msgctxt "Custom template name"
 msgid "Page (No Title)"
@@ -1126,17 +1138,17 @@ msgstr "XS"
 #: theme.json
 msgctxt "Space size name"
 msgid "Small"
-msgstr "Small"
+msgstr "Petit"
 
 #: theme.json
 msgctxt "Space size name"
 msgid "Medium"
-msgstr "Medium"
+msgstr "Moyen"
 
 #: theme.json
 msgctxt "Space size name"
 msgid "Large"
-msgstr "Large"
+msgstr "Grand"
 
 #: theme.json
 msgctxt "Space size name"
@@ -1161,32 +1173,32 @@ msgstr "Monospace"
 #: theme.json
 msgctxt "Font size name"
 msgid "X Small"
-msgstr "X Small"
+msgstr "XS"
 
 #: theme.json
 msgctxt "Font size name"
 msgid "Small"
-msgstr "Small"
+msgstr "Petite"
 
 #: theme.json
 msgctxt "Font size name"
 msgid "Medium"
-msgstr "Medium"
+msgstr "Moyenne"
 
 #: theme.json
 msgctxt "Font size name"
 msgid "Large"
-msgstr "Large"
+msgstr "Grande"
 
 #: theme.json
 msgctxt "Font size name"
 msgid "X Large"
-msgstr "X Large"
+msgstr "XL"
 
 #: theme.json
 msgctxt "Font size name"
 msgid "XX Large"
-msgstr "XX Large"
+msgstr "XXL"
 
 #: theme.json
 msgctxt "Template part name"
