--- a/languages/fr_FR.po
+++ b/languages/fr_FR.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: USM 1.0.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/usm-wordpress-"
 "theme\n"
-"POT-Creation-Date: 2024-01-09T13:35:17+00:00\n"
-"PO-Revision-Date: 2024-01-09 14:38+0100\n"
+"POT-Creation-Date: 2024-01-09T13:39:58+00:00\n"
+"PO-Revision-Date: 2024-01-09 14:41+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fr_FR\n"
@@ -40,25 +40,25 @@ msgstr ""
 "Ce type de donnée nécessite que l’extension ACF soit installée et activée !"
 
 #. translators: Label for core/navigation-link block arrow-link style
-#: functions.php:53
+#: functions.php:61
 msgctxt "Block style name"
 msgid "Arrow link"
 msgstr "Lien fléché"
 
 #. translators: Label for sidebar pattern category
-#: functions.php:61
+#: functions.php:69
 msgctxt "Pattern category name"
 msgid "Sidebar"
 msgstr "Colonne latérale"
 
 #. translators: Label for sidebar template part area
-#: functions.php:72
+#: functions.php:80
 msgctxt "Part area name"
 msgid "Sidebar"
 msgstr "Colonne latérale"
 
 #. translators: Description for sidebar template part area
-#: functions.php:74
+#: functions.php:82
 msgctxt "Part area description"
 msgid ""
 "The Sidebar template defines a page area that can be found on the Page (With "
@@ -947,6 +947,141 @@ msgid ""
 msgstr ""
 "Utiliser la clé du champ comme nom du champ peut aider a accéder aux "
 "informations de la donnée sans ID d’objet."
+
+#: build/format-types/icon/index.js:1
+msgctxt "Format title"
+msgid "Icon"
+msgstr "Icon"
+
+#: build/format-types/icon/index.js:1
+msgctxt "FA icon style"
+msgid "Solid"
+msgstr "Solid"
+
+#: build/format-types/icon/index.js:1
+msgctxt "FA icon style"
+msgid "Regular"
+msgstr "Regular"
+
+#: build/format-types/icon/index.js:1
+msgctxt "FA icon style"
+msgid "Brands"
+msgstr "Brands"
+
+#: build/format-types/icon/index.js:1
+msgctxt "FA icon size"
+msgid "2XS"
+msgstr "2XS"
+
+#: build/format-types/icon/index.js:1
+msgctxt "FA icon size"
+msgid "XS"
+msgstr "XS"
+
+#: build/format-types/icon/index.js:1
+msgctxt "FA icon size"
+msgid "Small"
+msgstr "Petite"
+
+#: build/format-types/icon/index.js:1
+msgctxt "FA icon size"
+msgid "Medium"
+msgstr "Moyenne"
+
+#: build/format-types/icon/index.js:1
+msgctxt "FA icon size"
+msgid "Large"
+msgstr "Grande"
+
+#: build/format-types/icon/index.js:1
+msgctxt "FA icon size"
+msgid "XL"
+msgstr "XL"
+
+#: build/format-types/icon/index.js:1
+msgctxt "FA icon size"
+msgid "2XL"
+msgstr "2XL"
+
+#: build/format-types/icon/index.js:1
+msgctxt "FA icon size"
+msgid "1x"
+msgstr "1x"
+
+#: build/format-types/icon/index.js:1
+msgctxt "FA icon size"
+msgid "2x"
+msgstr "2x"
+
+#: build/format-types/icon/index.js:1
+msgctxt "FA icon size"
+msgid "3x"
+msgstr "3x"
+
+#: build/format-types/icon/index.js:1
+msgctxt "FA icon size"
+msgid "4x"
+msgstr "4x"
+
+#: build/format-types/icon/index.js:1
+msgctxt "FA icon size"
+msgid "5x"
+msgstr "5x"
+
+#: build/format-types/icon/index.js:1
+msgctxt "FA icon size"
+msgid "6x"
+msgstr "6x"
+
+#: build/format-types/icon/index.js:1
+msgctxt "FA icon size"
+msgid "7x"
+msgstr "7x"
+
+#: build/format-types/icon/index.js:1
+msgctxt "FA icon size"
+msgid "8x"
+msgstr "8x"
+
+#: build/format-types/icon/index.js:1
+msgctxt "FA icon size"
+msgid "9x"
+msgstr "9x"
+
+#: build/format-types/icon/index.js:1
+msgctxt "FA icon size"
+msgid "10x"
+msgstr "10x"
+
+#: build/format-types/icon/index.js:1
+msgctxt "Input label"
+msgid "Style"
+msgstr "Style"
+
+#: build/format-types/icon/index.js:1
+msgctxt "Input label"
+msgid "Icon"
+msgstr "Icon"
+
+#: build/format-types/icon/index.js:1
+msgctxt "Input label"
+msgid "Size"
+msgstr "Taille"
+
+#: build/format-types/icon/index.js:1
+msgctxt "Input label"
+msgid "Fixed width"
+msgstr "Largeur fixe"
+
+#: build/format-types/icon/index.js:1
+msgctxt "Button label"
+msgid "Remove"
+msgstr "Supprimer"
+
+#: build/format-types/icon/index.js:1
+msgctxt "Button label"
+msgid "Apply"
+msgstr "Appliquer"
 
 #: build/blocks/meta-field-block/block.json
 #: src/blocks/meta-field-block/block.json
